--- a/c-data-structures/BUILD
+++ b/c-data-structures/BUILD
@@ -1,3 +1,4 @@
+load("@rules_cc//cc:cc_test.bzl", "cc_test")
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 package(
@@ -5,13 +6,18 @@ package(
 )
 
 cc_library(
-    name = "alist",
-    srcs = ["alist.c"],
-    hdrs = ["alist.h"],
+    name = "arraylike",
+    hdrs = ["arraylike.h"],
+)
+
+cc_test(
+    name = "arraylike_test",
+    size = "small",
+    srcs = ["arraylike_test.cc"],
     deps = [
-        "@memory_wrapper//alloc",
-        "@memory_wrapper//debug",
-        "@memory_wrapper//util",
+        ":arraylike",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -27,12 +33,6 @@ cc_library(
     ],
 )
 
-cc_binary(
-    name = "slist_test",
-    srcs = ["slist_test.c"],
-    deps = [":slist"],
-)
-
 cc_library(
     name = "keyed_list",
     srcs = ["keyed_list.c"],
@@ -41,23 +41,7 @@ cc_library(
         ":slist",
         "@memory_wrapper//alloc",
         "@memory_wrapper//debug",
+        "@memory_wrapper//struct:C_DATA_STRUCTURES_defaults",
         "@memory_wrapper//struct:map",
-        "@memory_wrapper//struct:struct_defaults",
     ],
-)
-
-cc_library(
-    name = "arraylike",
-    hdrs = ["arraylike.h"],
-    deps = [
-        "@memory_wrapper//alloc",
-        "@memory_wrapper//debug",
-    ],
-)
-
-cc_library(
-    name = "q",
-    srcs = ["q.c"],
-    hdrs = ["q.h"],
-    deps = [":arraylike"],
 )
